--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,55 @@
     "description": {
         "part1": "Для начала отредактируйте <1>src/App.js</1> и сохраните, чтобы перезагрузить.",
         "part2": "Переключение языка между английским и немецким с помощью кнопок выше."
+    },
+    "componies": "Присоединяйтесь к тысячам других компаний, чтобы улучшить свою команду",
+    "GetStartedForFree": "Начать Бесплатно",
+    "footer": {
+        "helpedTeams": "Мы помогли командам стать лучше",
+        "retrospective": "Pетроспективный",
+        "menu": {
+            "Menu": "Меню",
+            "About": "О Нас",
+            "Pricing": "Ценообразование",
+            "Features": "Функции",
+            "FAQ": "FAQ",
+            "WallofLove": "Стена Любви",
+            "Feature": "Запросы функций",
+            "SavePlanet": "Спасти планету"
+        },
+        "resources": {
+            "Resources": "Ресурсы",
+            "Templates": "Ретроспективные шаблоны",
+            "Academy": "Ретроспективная Академия",
+            "Blog": "Блог",
+            "Online": "Записки онлайн",
+            "OnlineScrum": "Скрам-доска онлайн",
+            "Brainstorm": "Мозговой штурм"
+        },
+        "tools":{
+            "Tools":"Инструменты",
+            "Meeting":"Инструмент повестки дня встречи",
+            "Minutes":"Инструмент протоколов собраний",
+            "Time":"Инструмент таймера встречи",
+            "Team":"Название команды Генератор",
+            "Burndown":"Генератор диаграмм выгорания",
+            "Easy":"Легкая слава",
+            "Moving":"Инструмент «Перемещение мотиваторов»"
+        },
+        "terms":{
+            "Terms":"Условия",
+            "Conditions":"Условия и положения",
+            "Privacy":"Политика конфиденциальности",
+            "Security":"Защита",
+            "Affllate":"Партнерская программа"
+        },
+        "follow":{
+            "Follow":"Следи за Нами",
+            "Twitter":"Twitter",
+            "Instagram":"Instagram",
+            "LinkedIn":"LinkedIn",
+            "YouTube":"YouTube",
+            "Contact":"Свяжись с Нами"       
+        }
     }
 }
