fix: worked on comments in section companies, worked with styles and translation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -53,5 +53,11 @@
             "YouTube": "YouTube",
             "Contact": "Contact Us"
         }
-    }
+    },
+    "jumbotron": {
+        "title": "Improve with Fun Sprint Retrospectives",
+        "paragraph": "Collaborate with your remote team and get better at what you do with a simple, intuitive and beautiful tool",
+        "button": "Get Started for Free"
+      }
 }
+
