--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -53,5 +53,10 @@
             "YouTube": "YouTube",
             "Contact": "Свяжись с Нами"
         }
+    },
+    "jumbotron": {
+        "title": "Совершенствуйтесь с помощью веселых ретроспектив спринта",
+        "paragraph": "Сотрудничайте со своей удаленной командой и совершенствуйтесь в том, что вы делаете, с помощью простого, интуитивно понятного и красивого инструмента",
+        "button": "Начните работу бесплатно"
     }
 }
