--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -58,6 +58,10 @@
         "title": "Совершенствуйтесь с помощью веселых ретроспектив спринта",
         "paragraph": "Сотрудничайте со своей удаленной командой и совершенствуйтесь в том, что вы делаете, с помощью простого, интуитивно понятного и красивого инструмента",
         "button": "Начните работу бесплатно"
+    },  
+    "companies":{
+        "title": "Нам доверяют тысячи компаний"
+    },   
     "benefits": {
         "WhatIsAFun": "Что такое весёлая ретроспектива?",
         "text": {
