feat:about page layout

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -197,5 +197,32 @@
             "name": "Slack integration",
             "content": "Show a notification on your team's channel when a board is created"
         }
+    },
+    "about": {
+        "aboutUs" : "About Us",
+        "first" : "EasyRetro started as a side project from Glauber Ramos back in 2015 and now has grown to be the most used retrospective tool in the world according to Alexa.com.",
+        "second" : "- “I created as an open-source project to help my team to do better retrospectives. The board got famous inside the company and then many other companies started using it as well.”",
+        "thirth" :  "It's now used by thousands of companies worldwide, from small startups to Fortune 500 companies. It's used daily by thousands of people that want to improve the way they work and get better at what they do.",
+        "whoIs" : "Who is EasyRetro?",
+        "devs": {
+            "first" : {
+                "name" : "Marco Araujo",
+                "job" : "Developer"
+            },
+            "second" : {
+                "name" : "Glauber Ramos",
+                "job" : "Founder"
+            },
+            "thirth" : {
+                "name" : "Filipe Linhares",
+                "job" : "Developer"
+            },
+            "fourth" : {
+                "name" : "Tchales Junior",
+                "job" : "Customer Support"
+            }
+        },
+        "OurMission" : "Our mission is to empower teams to reflect on their way of working. And to continuously become better in what they do",
+        "KeepInTuch" : "Keep in touch"
     }
 }
