--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -53,5 +53,23 @@
             "YouTube": "YouTube",
             "Contact": "Свяжись с Нами"
         }
+    },
+    "register":{
+        "register": "Зарегистрироваться",
+        "name": "Имя",
+        "email": "Почта",
+        "placeholder_email": "Ваша почта",
+        "password": "Пароль",
+        "placeholder_password": "Введите ваш пароль",
+        "p": "Должно содержать не менее 8 символов, 1 число, 1 прописную и 1 строчную буквы.",
+        "checkbox": "Регистрируясь, вы соглашаетесь с нашими",
+        "terms": " Условиями ",
+        "and": "и",
+        "privacy": " Политикой конфиденциальности",
+        "checkbox2": "Хочу получать обновления, рекламные акции и советы в свой почтовый ящик",
+        "create_account": "Создать аккаунт",
+        "sign_in": "Войти в систему с помощью Google",
+        "account": "Уже есть учетная запись?",
+        "login": "Войти"
     }
 }
