--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -61,7 +61,7 @@
         "placeholder_email": "Ваша почта",
         "password": "Пароль",
         "placeholder_password": "Введите ваш пароль",
-        "paragraph": "Должно содержать не менее 8 символов, 1 число, 1 прописную и 1 строчную буквы.",
+        "password_requirements": "Должно содержать не менее 8 символов, 1 число, 1 прописную и 1 строчную буквы.",
         "checkbox": "Регистрируясь, вы соглашаетесь с нашими",
         "terms": " Условиями ",
         "and": "и",
