--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -235,7 +235,7 @@
             "publick": "Публичные доски в месяц",
             "number": "Количество команд",
             "surveys": "Опросов на доску",
-            "unlimited": "Неограниченные досоки",
+            "unlimited": "Неограниченные доски",
             "unlimitedTeam": "Неограниченные команды"
         },
         "priceCard": {
@@ -252,7 +252,11 @@
         },
         "popular": "Популярный план",
         "forMore":"Для большего количества команд пожалуйста,",
-        "contact":"свяжитесь с нами"
+        "contact":"свяжитесь с нами",
+        "first":{
+            "price":"$0",
+            "billed":"счет ежегодно"
+        }
 
     }
 }
