feat:pricing page layout

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -255,7 +255,7 @@
         "contact":"contact us ",
         "first":{
             "price":"$0",
-            "billed":"billed annually"
+            "billed":"annual bill"
         }
     }
 }
