--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -255,7 +255,7 @@
         "contact":"свяжитесь с нами",
         "first":{
             "price":"$0",
-            "billed":"счет ежегодно"
+            "billed":"счет ежегодный"
         }
 
     }
