feat:don header

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,13 @@
     "description": {
         "part1": "To get started , edit <1>src/App.js</1> and saveto reload  " ,
         "part2": "Switch language between english and german using buttons above. "
+    },
+    "header": {
+        "about": "About",
+        "pricing": "Pricing",
+        "features": "Features",
+        "login": "Login",
+        "register": "Register"
+        
     }
 }
