--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,12 @@
     "description": {
         "part1": "Для начала отредактируйте <1>src/App.js</1> и сохраните, чтобы перезагрузить.",
         "part2": "Переключение языка между английским и немецким с помощью кнопок выше."
+    },
+    "header": {
+        "about": "О нас",
+        "pricing": "Цены",
+        "features": "Функции",
+        "login": "Авторизоваться",
+        "register": "Регистр"
     }
 }
