feat/sign up with google

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -309,5 +309,6 @@
             "price":"$0",
             "billed":"annual bill"
         }
-    }
+    },
+    "errorMassage": "Registration failed. Please check if you are already registered"
 }
