--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -309,5 +309,6 @@
             "price":"$0",
             "billed":"счет ежегодный"
         }
-    }
+    },
+    "errorMassage": "Регистрация не удалась. Пожалуйста, проверьте, если вы уже зарегистрированы"
 }
