--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -310,5 +310,7 @@
             "billed":"счет ежегодный"
         }
     },
-    "errorMassage": "Регистрация не удалась. Пожалуйста, проверьте, если вы уже зарегистрированы"
+    "errorMassage": "Регистрация не удалась. Пожалуйста, проверьте, если вы уже зарегистрированы",
+    "nameLo":"Имя должно быть длинее",
+    "email": "Email должен содержать @"
 }
