feat: reset page functional

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -63,6 +63,7 @@
     },
     "password":{
         "password_reset_title": "Password reset",
+        "loading": "Loading...",
         "email": "Email",
         "email_placeholder": "Your email",
         "reset_password_btn": "Reset my password",
