fix: added translation in toast

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -68,7 +68,9 @@
         "email_placeholder": "Ваша почта",
         "reset_password_btn": "Сбросить мой пароль",
         "or": "Или",
-        "back_to_login": "Вернуться на страницу входа"
+        "back_to_login": "Вернуться на страницу входа",
+        "toast_success": "Ссылка для сброса пароля была УСПЕШНО отправлена на вашу почту, пожалуйста, проверьте ее",
+        "toast_error": "Ошибка! Что-то пошло не так"
     },
     "register":{
         "register": "Зарегистрироваться",
