--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -69,7 +69,7 @@
         "reset_password_btn": "Reset my password",
         "or": "Or",
         "back_to_login": "Back to Login",
-        "toast_success": "SUCCESS! Password reset link has been sent to your email, please check it",
+        "toast_success": "Password reset email sent successfully!",
         "toast_error": "ERROR! Something went wrong"
     },
     "register":{
