--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -69,7 +69,7 @@
         "reset_password_btn": "Сбросить мой пароль",
         "or": "Или",
         "back_to_login": "Вернуться на страницу входа",
-        "toast_success": "Ссылка для сброса пароля была УСПЕШНО отправлена на вашу почту, пожалуйста, проверьте ее",
+        "toast_success": "Электронное письмо для сброса пароля отправлено успешно!",
         "toast_error": "Ошибка! Что-то пошло не так"
     },
     "register":{
