--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -69,8 +69,8 @@
         "reset_password_btn": "Сбросить мой пароль",
         "or": "Или",
         "back_to_login": "Вернуться на страницу входа",
-        "toast_success": "Электронное письмо для сброса пароля отправлено успешно!",
-        "toast_error": "Ошибка! Что-то пошло не так"
+        "success_message": "Электронное письмо для сброса пароля отправлено успешно!",
+        "error_message": "Ошибка! Что-то пошло не так"
     },
     "register":{
         "register": "Зарегистрироваться",
